# secretary-Kim

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  test_imagen4.ipynb
.agents/: AGENTS.md
.agents/rules/: env.md  project-structure.md
.agents/skills/create_kim_skill/: SKILL.md
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  main.yml
app/: __init__.py  main.py
app/agent/: context.py  core.py  models.py  registry.py
app/agent/skills/: attendance_skill.py  base.py  event_skill.py  gacha_skill.py  music_skill.py  pixellab_skill.py
app/core/: config.py  container.py  logger.py
app/domain/models/: __init__.py  event.py  gacha.py
app/presentation/: discord_bot.py  event_cog.py  gacha_cog.py
app/services/: __init__.py  attendance.py  database.py  event.py  gacha.py  music.py  pixellab.py  pomodoro.py  task.py
app/services/agent/: __init__.py  event_management.py  task_management.py
app/services/gacha/: __init__.py  constants.py  evolution_animator.py  prompts.py  service.py
data/: database.db
docs/: agent_framework.md
