[project]
name = "discord-research-assistance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dependency-injector>=4.49.1",
    "discord-py>=2.7.1",
    "google-genai>=2.12.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "yt-dlp>=2026.7.4",
    "PyNaCl>=1.6.2",
    "davey>=0.1.6",
    "pillow>=12.3.0",
    "aiosqlite>=0.22.1",
    "pyxelate",
]

[tool.uv.sources]
pyxelate = { git = "https://github.com/sedthh/pyxelate.git" }
